--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.3",
     "@storybook/react": "^5.3.19",
+    "@types/storybook-react-router": "^1.0.1",
     "jest-image-snapshot": "^4.0.2",
     "jest-puppeteer": "^4.4.0",
     "puppeteer": "^5.1.0",
